--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -19,10 +19,10 @@ menu:
    Link: /link/ || fas fa-link
    About: /about/ || fas fa-heart
    Language||fas fa-language:
-     English: /en || fas fa-e
-     简体中文: / || fas fa-c
-     繁體中文: /zh-TW || fas fa-c
-     日本語: /ja || fas fa-j
+     English: https://en.findfuns.org || fas fa-e
+     简体中文: https://findfuns.org || fas fa-c
+     繁體中文: https://zh-TW.findfuns.org || fas fa-c
+     日本語: https://ja.findfuns.org || fas fa-j
 
 
 # Code Blocks (代碼相關)
