--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,7 @@ timezone: Asia/Tokyo
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://findfuns.org/en
-root: /en/
+url: https://en.findfuns.org
 permalink: :year/:month/:day/:post_title/
 permalink_defaults:
 pretty_urls:
